# duckpl

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  quack_extension.cpp
src/include/: quack_extension.hpp
src/include/pg/: pg_query_json_plpgsql.h
src/include/postgres/include/nodes/: nodeFuncs.h  pg_list.h
src/include/postgres/include/utils/: elog.h
src/libpg_query/: CMakeLists.txt  pg_functions.cpp  postgres_parser.cpp  src_backend_nodes_list.cpp  src_backend_nodes_makefuncs.cpp  src_backend_nodes_value.cpp  src_backend_parser_gram.cpp  src_backend_parser_parser.cpp  src_backend_parser_scan.cpp  src_backend_parser_scansup.cpp  src_common_keywords.cpp
src/libpg_query/grammar/: grammar.hpp
src/libpg_query/include/: pg_definitions.hpp  pg_functions.hpp  pg_simplified_token.hpp  postgres_parser.hpp
src/libpg_query/include/common/: keywords.hpp
src/libpg_query/include/datatype/: timestamp.hpp
src/libpg_query/include/mb/: pg_wchar.hpp
src/libpg_query/include/nodes/: bitmapset.hpp  lockoptions.hpp  makefuncs.hpp  nodeFuncs.hpp  nodes.hpp  parsenodes.hpp  pg_list.hpp  primnodes.hpp  value.hpp
src/libpg_query/include/parser/: gramparse.hpp  kwlist.hpp  parser.hpp  scanner.hpp  scansup.hpp
src/parser/: pg_query_parse_plpgsql.c
src/pg/: CMakeLists.txt  pg_query_json_helper.c  pg_query_json_plpgsql.c  pg_query_parse_plpgsql.c
src/postgres/: CMakeLists.txt  src_backend_nodes_list.c  src_common_stringinfo.c
